# tmg1-esp32-demo

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  ERRORS.md  MEMORY.md  README.ja.md  README.md  platformio.ini
.claude/: architecture.md  coding-style.md  workflows.md
.claude/context/: current-sprint.md  errors-log.md  known-issues.md  session-history.md
.github/workflows/: ci.yml
data/: _bad-apple15.tmg1  bad-apple15.tmg1  sample-video.tmg1
docs/: implementation-plan.md
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_semantic_new.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
lib/tmg1-codec/: CMakeLists.txt  library.properties
lib/tmg1-codec/c_api/: tmg1_c.cpp  tmg1_c.h
lib/tmg1-codec/include/tmg1/: arduino_stream.h  decoder.h  encoder.h  freq_model.h  io.h  prediction.h  range_decoder.h  range_encoder.h  rice_reader.h  rice_writer.h  types.h
lib/tmg1-codec/src/: decoder.cpp  encoder.cpp  prediction.cpp  range_decoder.cpp  range_encoder.cpp  rice_reader.cpp  rice_writer.cpp
lib/tmg1-codec/test/: test_codec.cpp  test_prediction.cpp  test_range.cpp  test_rice.cpp
src/: FrequencyModel.cpp  FrequencyModel.h  RangeDecoder.cpp  RangeDecoder.h  RiceBitReader.cpp  RiceBitReader.h  Tmg1Decoder.cpp  Tmg1Decoder.h  main.cpp  video_data.h
test/: MemoryStream.h  test_Tmg1Decoder.cpp  test_data_simple.tmg1  test_main.cpp  test_range_coder.cpp
test/stubs/: Arduino.cpp  Arduino.h
